--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#intro">About Me</a></li>
+							<li><a href="#one">Work Experience</a></li>
+							<li><a href="#two">Certification</a></li>
+							<li><a href="#three">Blog</a></li>
+							<li><a href="#four">Contact Details</a></li>
+
 						</ul>
 					</nav>
 				</div>
@@ -34,9 +36,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Gaurav Pawar</h1>
+							<p>Data Scientist with 6 years of Data Science experience.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
