--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Swiggy (India's largest Food Ordering Platform)</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h3>Location Intelligence : </h3>
+									<p>Distance Prediction Model.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
