--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<ul>
 							<li><a href="#intro">About Me</a></li>
 							<li><a href="#one">Work Experience</a></li>
-							<li><a href="#two">Certification</a></li>
+							<li><a href="#two">Certifications</a></li>
 							<li><a href="#three">Blog</a></li>
 							<li><a href="#four">Contact Details</a></li>
 
@@ -53,8 +53,11 @@
 									<h2>Swiggy (India's largest Food Ordering Platform)</h2>
 									<h3>Location Intelligence : </h3>
 									<p>Distance Prediction Model.</p>
+									<p>Time Prediction Model.</p>
+									<h3>Marketing Intelligence : </h3>
+									<p>Causality modeling for targeted discounting.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="#two" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -63,7 +66,7 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
+									<h2>Deep Learning Specialisation</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
