--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Deep Learning Specialisation</h2>
+									<h2>Mobisy Technologies</h2>
+									<h2>Sales Forescsting</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Large Scale Object Detection</h2>
+									<p> XYZ</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
