--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 									<h2>Sales Forescsting</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<h2>Large Scale Object Detection</h2>
-									<p> XYZ</p>
+									<p> XYZ </p>
+									<h2>Sales Prediction</h2>
+									<p> XYZ </p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -81,8 +83,8 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>AllGo Embedded Systems</h2>
+									<p>xyz</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
