--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Mobisy Technologies</h2>
-									<h2>Sales Forescsting</h2>
+									<h3>Sales Forecasting for Suggested Order</h3>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<h2>Large Scale Object Detection</h2>
+									<h3>Large Scale Object Detection</h3>
 									<p> XYZ </p>
-									<h2>Sales Prediction</h2>
+									<h2>Face Recognition</h2>
 									<p> XYZ </p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
