--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Gaurav Pawar</h1>
-							<p>Data Scientist with 6 years of Data Science experience.</p>
+							<p>Data Scientist with 6 years of work experience in field of computer vision, NLP and Forecasting.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
