--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Gaurav Pawar</h1>
-							<p>Data Scientist with 6 years of work experience in field of computer vision, NLP and Forecasting.</p>
+							<p>Data Scientist with 6 years of work experience in field of Computer Vision, NLP and Forecasting.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -52,10 +52,9 @@
 								<div class="inner">
 									<h2>Swiggy (India's largest Food Ordering Platform)</h2>
 									<h3>Location Intelligence : </h3>
-									<p>Distance Prediction Model.</p>
-									<p>Time Prediction Model.</p>
-									<h3>Marketing Intelligence : </h3>
-									<p>Causality modeling for targeted discounting.</p>
+									<p>Distance Prediction Model</p>
+									<p>Address Intelligence</p>
+									<p>Time Prediction Model</p>
 									<ul class="actions">
 										<li><a href="#two" class="button">Learn more</a></li>
 									</ul>
@@ -68,7 +67,7 @@
 								<div class="inner">
 									<h2>Mobisy Technologies</h2>
 									<h3>Sales Forecasting for Suggested Order</h3>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>XYZ</p>
 									<h3>Large Scale Object Detection</h3>
 									<p> XYZ </p>
 									<h3>Face Recognition</h3>
@@ -84,7 +83,10 @@
 							<div class="content">
 								<div class="inner">
 									<h2>AllGo Embedded Systems</h2>
-									<p>xyz</p>
+									<h3>Driver Monitoring System</h3>
+									<p>XYZ</p>
+									<h3>Surround View Parking Assistance</h3>
+									<p>XYZ</p>									
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -96,27 +98,27 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
+							<h2>Certification</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
+									<h3>Advanced Certification in Artificial Intelligence and Machine Learning - IIIT Hyderabad</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
+									<h3>Deep Learning Specialization</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
+									<h3>Tensorflow in Practice Specialization</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
+									<h3>Mathematics in Machine Learning</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
